public-node/mainnet/public-mainnet-ckb-monitor.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: public-mainnet-ckb-monitor
  namespace: public-node
spec:
  replicas: 1
  selector:
    matchLabels:
      app: public-mainnet-ckb-monitor
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: public-mainnet-ckb-monitor
    spec:
      containers:
        - name: public-mainnet-ckb-monitor
          image: 'jiangxianliang/ckbindexer-exporter:0.2'
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
