public-node/mainnet/public-mainnet-ckb.yaml
---
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: public-mainnet-ckb
  namespace: public-node
spec:
  replicas: 1
  selector:
    matchLabels:
      app: public-mainnet-ckb
      logging: 'true'
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: public-mainnet-ckb
        logging: 'true'
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: public-testnet-pvc
      containers:
        - name: public-mainnet-ckb
          image: 'nervos/ckb:v0.105.1'
          command:
            - bash
            - '-c'
            - |
              set -ex
              cd /var/lib/ckb
              #ckb init --chain mainnet --force
              ckb init --chain mainnet || true
              ckb migrate --force
              ckb run
          ports:
            - name: rpc
              containerPort: 8114
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: data
              mountPath: /var/lib/ckb
              subPath: public-mainnet-ckb
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext:
        runAsUser: 0
      schedulerName: default-scheduler
  serviceName: ckb
  podManagementPolicy: OrderedReady
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      partition: 0
  revisionHistoryLimit: 10
