public-node/mainnet/public-mainnet-ckb-nginx-svc.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: public-mainnet-ckb-nginx-svc
  namespace: public-node
  annotations: {}
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: public-mainnet-ckb-nginx
  type: ClusterIP
